--- a/index.html
+++ b/index.html
@@ -42,6 +42,35 @@
                 <p>O financiamento privado por empresas de capital de risco caiu 50%.</p>
             </div>
         </section>
+
+        <section>
+            <div>
+                <img src="./assets/images/image-retro-pcs.jpg" alt="Imagem de computadores antigos">
+
+                <div>
+                    <strong>01</strong>
+                    <H2>Revivendo PCs antigos</H2>
+                    <p>E se PCs antigos pudessem receber peças modernas?</p>
+                </div>
+            </div>
+
+            <div>
+                <img src="./assets/images/image-top-laptops.jpg" alt="Imagem de laptop"> 
+                    <strong>02</strong>
+                    <h2>Top 10 Laptops de 2025</h2>
+                    <p>Nossas melhores escolhas para diversas necessidades.</p>
+                
+            </div>
+
+            <div>
+                <img src="./assets/images/image-gaming-growth.jpg" alt="Imagem de um controle de vídeo game"> 
+                    <strong>03</strong>
+                    <h2>O Crescimento dos Jogos</h2>
+                    <p>Como a pandemia tem gerado novas oportunidades.</p>
+                
+            </div>
+
+        </section>
     </main>
 </body>
 </html>
