--- a/index.html
+++ b/index.html
@@ -3,74 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>W. Notícias</title>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/regular/style.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/@phosphor-icons/web@2.1.1/src/fill/style.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Redacted&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="style.css">
+    <title>QuickList</title>
 </head>
 <body>
     <header>
-        <img src="./assets/images/logo.svg" alt="Logo do site de notícias W.">
+        <img src="./assets/logo.png" alt="Logo QuickList">
 
         <button>
-            <img src="./assets/images/icon-menu.svg" alt="Ícone do menu hamburger">
+            <i class="ph ph-arrow-left"></i>
+            Voltar
         </button>
+        <h1>Compras da semana</h1>
     </header>
 
     <main>
-        <section>
-            <img src="./assets/images/image-web-3-mobile.jpg" alt="Ícone de puzzle colorido">
-
-            <h1>O futuro brilhante da Web 3.0?</h1>
-            <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
-
-            <button>Ler Mais</button>
+        <section class="add-item">
+            <input type="text" placeholder="Adicione um novo item" id="item">
+            <button onclick="addItem()">Adicionar item</button>
         </section>
 
-        <section>
-            <h2>Novo</h2>
+        <section class="list"></section>
 
+        <div class="warning hide-warning">
             <div>
-                <h3>Hidrogênio VS Carros Elétricos</h3>
-                <p>Os carros movidos a hidrogênio alguma vez alcançarão os veículos elétricos?</p>
+                <i class="ph ph-warning-circle ph-fill"></i>
+                <span>O item foi removido da lista</span>
             </div>
 
-            <div>
-                <h3>A arte gerada por IA</h3>
-                <p>Quais são os possíveis efeitos adversos da geração de imagens por IA sob demanda?</p>
-            </div>
-
-            <div>
-                <h3>O VC Funding está esgotado?</h3>
-                <p>O financiamento privado por empresas de capital de risco caiu 50%.</p>
-            </div>
-        </section>
-
-        <section>
-            <div>
-                <img src="./assets/images/image-retro-pcs.jpg" alt="Imagem de computadores antigos">
-
-                <div>
-                    <strong>01</strong>
-                    <H2>Revivendo PCs antigos</H2>
-                    <p>E se PCs antigos pudessem receber peças modernas?</p>
-                </div>
-            </div>
-
-            <div>
-                <img src="./assets/images/image-top-laptops.jpg" alt="Imagem de laptop"> 
-                    <strong>02</strong>
-                    <h2>Top 10 Laptops de 2025</h2>
-                    <p>Nossas melhores escolhas para diversas necessidades.</p>
-                
-            </div>
-
-            <div>
-                <img src="./assets/images/image-gaming-growth.jpg" alt="Imagem de um controle de vídeo game"> 
-                    <strong>03</strong>
-                    <h2>O Crescimento dos Jogos</h2>
-                    <p>Como a pandemia tem gerado novas oportunidades.</p>
-                
-            </div>
-
-        </section>
+            <button>
+                <i class="ph ph-x"></i>
+            </button>
+        </div>
     </main>
 </body>
 </html>
